--- a/DeepFake.ipynb
+++ b/DeepFake.ipynb
@@ -11,6 +11,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Cài thư viện"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -33,6 +40,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Chạy"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -41,7 +55,7 @@
       "outputs": [],
       "source": [
         "%cd /content/change-face\n",
-        "!python run.py -s /content/face.jpeg -t /content/video.mp4 -o /content/new_video.mp4 --frame-processor face_swapper"
+        "!python run.py -s /content/image.jpg -t /content/video.mp4 -o /content/new_video.mp4 --frame-processor face_swapper"
       ]
     }
   ],
