Được tạo bằng Colaboratory

--- a/DeepFake.ipynb
+++ b/DeepFake.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tripleseven190504/change-face/blob/main/DeepFake.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,9 +12,11 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "XquMYRP4qW0w"
+      },
       "source": [
-        "Cài thư viện"
+        "#Cài thư viện"
       ]
     },
     {
@@ -41,10 +43,50 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "fbdW5Q_iqW1B"
+      },
       "source": [
-        "Chạy"
+        "# Chạy"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "\n",
+        "\n",
+        "def convert_frame_rate(input_video_path, output_video_path, target_fps=24):\n",
+        "    cap = cv2.VideoCapture(input_video_path)\n",
+        "    frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+        "    frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+        "    frame_count = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+        "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+        "\n",
+        "    frame_indices = [int(frame_index) for frame_index in range(\n",
+        "        0, frame_count, int(fps / target_fps))]\n",
+        "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+        "    out = cv2.VideoWriter(output_video_path, fourcc,\n",
+        "                          target_fps, (frame_width, frame_height))\n",
+        "    for frame_index in frame_indices:\n",
+        "        cap.set(cv2.CAP_PROP_POS_FRAMES, frame_index)\n",
+        "        ret, frame = cap.read()\n",
+        "        if ret:\n",
+        "            out.write(frame)\n",
+        "        else:\n",
+        "            break\n",
+        "\n",
+        "    cap.release()\n",
+        "    out.release()\n",
+        "\n",
+        "\n",
+        "convert_frame_rate('input_video.mp4', 'video.mp4', target_fps=24)\n"
+      ],
+      "metadata": {
+        "id": "DXaze9QvqiM5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -62,10 +104,9 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "authorship_tag": "ABX9TyMTdt1Y1rep7hl1DNlY7vmT",
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
