--- a/DeepFake.ipynb
+++ b/DeepFake.ipynb
@@ -53,39 +53,24 @@
     {
       "cell_type": "code",
       "source": [
-        "import cv2\n",
+        "from moviepy.editor import VideoFileClip\n",
         "\n",
         "\n",
-        "def convert_frame_rate(input_video_path, output_video_path, target_fps=24):\n",
-        "    cap = cv2.VideoCapture(input_video_path)\n",
-        "    frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-        "    frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-        "    frame_count = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
-        "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
-        "\n",
-        "    frame_indices = [int(frame_index) for frame_index in range(\n",
-        "        0, frame_count, int(fps / target_fps))]\n",
-        "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
-        "    out = cv2.VideoWriter(output_video_path, fourcc,\n",
-        "                          target_fps, (frame_width, frame_height))\n",
-        "    for frame_index in frame_indices:\n",
-        "        cap.set(cv2.CAP_PROP_POS_FRAMES, frame_index)\n",
-        "        ret, frame = cap.read()\n",
-        "        if ret:\n",
-        "            out.write(frame)\n",
-        "        else:\n",
-        "            break\n",
-        "\n",
-        "    cap.release()\n",
-        "    out.release()\n",
+        "def convert_to_24fps(input_video_path, output_video_path):\n",
+        "    clip = VideoFileClip(input_video_path)\n",
+        "    clip = clip.set_fps(24)\n",
+        "    clip.write_videofile(output_video_path, codec='libx264', fps=24)\n",
         "\n",
         "\n",
-        "convert_frame_rate('input_video.mp4', 'video.mp4', target_fps=24)\n"
+        "input_video_path = 'input_video.mp4'\n",
+        "output_video_path = 'video.mp4'\n",
+        "\n",
+        "convert_to_24fps(input_video_path, output_video_path)\n"
       ],
       "metadata": {
         "id": "DXaze9QvqiM5"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
